--- a/style.css
+++ b/style.css
@@ -20,237 +20,271 @@ html * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Gotham, Helvetica Neue, Helvetica, Arial," sans-serif";
-  }
+  font-family: Gotham, Helvetica Neue, Helvetica, Arial, " sans-serif";
+}
 
 header {
-    padding: 32px;
-  }
+  padding: 32px;
+}
 
 body {
-    margin-left: auto;
-    margin-right: auto;
-    background: #ffffff;
-    }
+  margin-left: auto;
+  margin-right: auto;
+  background: #ffffff;
+}
 .col {
-    width: 100%;
-    }
+  width: 100%;
+}
 
-.row:before, .row:after {
-    content: "";
-    display: table;
-    }
+.row:before,
+.row:after {
+  content: "";
+  display: table;
+}
 
 .row:after {
-    clear: both;
-    }
+  clear: both;
+}
 
 .style-logo {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    width: 120px;
-    }
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 120px;
+}
 
 .style-nav ul {
-    list-style-type: none;
-    }
+  list-style-type: none;
+}
 
 .style-nav ul li a {
-    text-decoration: none;
-    color: #559953;
-    text-align: center;
-    display: block;
-    padding: 8px;
-    }
+  text-decoration: none;
+  color: #559953;
+  text-align: center;
+  display: block;
+  padding: 8px;
+}
 
-    /* unvisited link */
-    a.style-nav:link {
-      color: green;
-    }
+/* unvisited link */
+a.style-nav:link {
+  color: green;
+}
 
-    /* visited link */
-    a.style-nav:visited {
-      color: green;
-    }
+/* visited link */
+a.style-nav:visited {
+  color: green;
+}
 
-    /* mouse over link */
-    a.style-nav:hover {
-      color: red;
-    }
+/* mouse over link */
+a.style-nav:hover {
+  color: red;
+}
 
-    /* selected link */
-    a.style-nav:active {
-      color: yellow;
-    }
+/* selected link */
+a.style-nav:active {
+  color: yellow;
+}
 
 /*Container that includes two columns*/
 .col-2 {
-  margin:0;
+  margin: 0;
   align-content: center;
   align-self: center;
-
 }
-    /* Create two equal columns that floats next to each other */
-    .Song {
-      float: left;
-      width: 30%;
-      padding-left: 40px;
-      margin-left: 60px;
-      height: 300px; /* Should be removed. Only for demonstration */
-    }
+/* Create two equal columns that floats next to each other */
+.Song {
+  float: left;
+  width: 30%;
+  padding-left: 40px;
+  margin-left: 60px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
 
-    .intro {
-      float: left;
-      width: 30%;
-      padding: 10px;
-      margin-right:10px;
-      height: 300px; /* Should be removed. Only for demonstration */
-    }
+.intro p {
+  border-radius: 1.15rem;
+  line-height: 1.25;
+  max-width: 75%;
+  padding: 0.5rem .875rem;
+  position: relative;
+  word-wrap: break-word;
+}
 
-    /* Clear floats after the columns */
-    .col-2:after {
-      content: "";
-      display: table;
-      clear: both;
+.intro p::before,
+.intro p::after {
+  bottom: -0.1rem;
+  content: "";
+  height: 1rem;
+  position: absolute;
+}
 
-    }
+.intro {
+  float: left;
+  width: 30%;
+  padding: 10px;
+  margin-right: 10px;
+  height: auto; /* Should be removed. Only for demonstration */
+  border-radius: 35px;
+  margin-bottom: 130px;
+}
 
-    .themaking-container {
-      width: 100%;
-      height: 500px;
-      background-image: url('images/a.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center center;
-      box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-      display: flex;
-      margin: -1% auto 20px auto;
-      margin-top: 6rem;
-      position: relative;
-      align-items: center;
-    }
+p.intro-text::before {
+  border-bottom-left-radius: 0.8rem 0.7rem;
+  border-right: 1rem solid #248bf5;
+  right: -0.35rem;
+  transform: translate(0, -0.1rem);
+}
 
-    .themaking-text {
-      font-family: arial black;
-      font-size: 70px;
-      align-items: left;
-      margin-left: 7rem;
-      color: white;
-      text-decoration: none;
-    }
+p.intro-text::after {
+  background-color: black;
+  border-bottom-left-radius: 0.5rem;
+  right: -40px;
+  transform:translate(-30px, -2px);
+  width: 10px;
+}
+/* Clear floats after the columns */
+.col-2:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
-    .thetypes-container {
-      width: 100%;
-      height: 500px;
-      background-image: url('images/b.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center center;
-      box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-      display: flex;
-      margin: -1% auto 20px auto;
-      position: relative;
-      align-items: center;
-    }
+.themaking-container {
+  width: 100%;
+  height: 500px;
+  background-image: url("images/a.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  margin: -1% auto 20px auto;
+  margin-top: 6rem;
+  position: relative;
+  align-items: center;
+}
 
-    .thetypes-text {
-      font-family: arial black;
-      font-size: 70px;
-      align-items: center;
-      margin-left: 60rem;
-      color: white;
-      text-decoration: none;
-    }
+.themaking-text {
+  font-family: arial black;
+  font-size: 70px;
+  align-items: left;
+  margin-left: 7rem;
+  color: white;
+  text-decoration: none;
+}
 
-    .storytime-container {
-      width: 100%;
-      height: 500px;
-      background-image: url('images/song.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center center;
-      box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-      display: flex;
-      margin: -1% auto 20px auto;
-      position: relative;
-      align-items: center;
-    }
+.thetypes-container {
+  width: 100%;
+  height: 500px;
+  background-image: url("images/b.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  margin: -1% auto 20px auto;
+  position: relative;
+  align-items: center;
+}
 
-    .storytime-text {
-      font-family: arial black;
-      font-size: 70px;
-      align-items: left;
-      margin-left: 7rem;
-      color: white;
-      text-decoration: none;
-    }
+.thetypes-text {
+  font-family: arial black;
+  font-size: 70px;
+  align-items: center;
+  margin-left: 60rem;
+  color: white;
+  text-decoration: none;
+}
 
-    .contact-container {
-      width: 100%;
-      height: 500px;
-      background-image: url('images/d.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center center;
-      box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-      display: flex;
-      margin: -1% auto 20px auto;
-      position: relative;
-      align-items: center;
-    }
+.storytime-container {
+  width: 100%;
+  height: 500px;
+  background-image: url("images/song.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  margin: -1% auto 20px auto;
+  position: relative;
+  align-items: center;
+}
 
-    .contact-text {
-      font-family: arial black;
-      font-size: 80px;
-      align-items: center;
-      margin-left: 50rem;
-      color: white;
-      text-decoration: none;
-    }
+.storytime-text {
+  font-family: arial black;
+  font-size: 70px;
+  align-items: left;
+  margin-left: 7rem;
+  color: white;
+  text-decoration: none;
+}
+
+.contact-container {
+  width: 100%;
+  height: 500px;
+  background-image: url("images/d.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  margin: -1% auto 20px auto;
+  position: relative;
+  align-items: center;
+}
+
+.contact-text {
+  font-family: arial black;
+  font-size: 80px;
+  align-items: center;
+  margin-left: 50rem;
+  color: white;
+  text-decoration: none;
+}
 
 /*Tablet View*/
-@media (min-width: 768px){
-body {
+@media (min-width: 768px) {
+  body {
     max-width: 778px;
-    }
-
-.style-nav ul li {
-    display: inline-block;
-    }
-
-.style-nav ul {
-    text-align: center;
-    }
-.col-md-one-half {
-    width: 50%;
-    }
-
-.col {
-    float: left;
-    padding: 0px 7px 14px;
-    }
   }
 
-/*Desktop View*/
-@media (min-width: 1024px){
-body {
-    max-width: 1200px;
-    }
+  .style-nav ul li {
+    display: inline-block;
+  }
 
-.style-logo {
+  .style-nav ul {
+    text-align: center;
+  }
+  .col-md-one-half {
+    width: 50%;
+  }
+
+  .col {
     float: left;
-    }
+    padding: 0px 7px 14px;
+  }
+}
 
-.style-nav {
-     float: right;
-     }
+/*Desktop View*/
+@media (min-width: 1024px) {
+  body {
+    max-width: 1200px;
+  }
 
-.col-lg-one-fourth {
-     width: 25%;
-     }
- }
+  .style-logo {
+    float: left;
+  }
 
-.test {
-  color: red;
+  .style-nav {
+    float: right;
+  }
+
+  .col-lg-one-fourth {
+    width: 25%;
+  }
+}
+
+.div-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
