--- a/style.css
+++ b/style.css
@@ -25,6 +25,19 @@ html * {
 
 header {
   padding: 32px;
+  position: fixed;
+  background-color: white;
+  display: flex;
+  z-index: 10;
+  width: 75rem;
+}
+
+#app {
+  margin-top: 0rem;
+}
+
+.header-container {
+  float: right;
 }
 
 body {
@@ -36,21 +49,17 @@ body {
   width: 100%;
 }
 
-.row:before,
-.row:after {
-  content: "";
-  display: table;
-}
-
-.row:after {
-  clear: both;
+.row {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
 .style-logo {
-  margin-left: auto;
   margin-right: auto;
   display: block;
   width: 120px;
+  right: 0;
 }
 
 .style-nav ul {
